test/valid/method.js
function f(obj, x) { return obj.method(x); }
f;

